--- a/src/assets/sass/_carousel.scss
+++ b/src/assets/sass/_carousel.scss
@@ -16,7 +16,7 @@
   }
 
   &__item {
-      color: oscurecer($color);
+      color: $dark-color;
       text-decoration: none;
       font-weight: 600;
       text-align: center;
