--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -31,9 +31,9 @@
                 z-index: 1;
             }
             &__desc {
-                border-top: 1px solid oscurecer($color);
-                border-bottom: 1px solid oscurecer($color);
-                border-right: 1px solid oscurecer($color);
+                border-top: 1px solid $dark-color;
+                border-bottom: 1px solid $dark-color;
+                border-right: 1px solid $dark-color;
                 margin-left: -70px;
                 padding-left: 80px;
                 padding-right: 60px;
@@ -62,9 +62,9 @@
                 z-index: 1;
             }
         &__desc {
-            border-top: 1px solid oscurecer($color);
-            border-bottom: 1px solid oscurecer($color);
-            border-right: 1px solid oscurecer($color);
+            border-top: 1px solid $dark-color;
+            border-bottom: 1px solid $dark-color;
+            border-right: 1px solid $dark-color;
             margin-left: -70px;
             padding-left: 80px;
             padding-right: 60px;
@@ -93,9 +93,9 @@
                 z-index: 1;
             }
             &__desc {
-                border-top: 1px solid oscurecer($color);
-                border-bottom: 1px solid oscurecer($color);
-                border-right: 1px solid oscurecer($color);
+                border-top: 1px solid $dark-color;
+                border-bottom: 1px solid $dark-color;
+                border-right: 1px solid $dark-color;
                 margin-left: -70px;
                 padding-left: 80px;
                 padding-right: 30px;
@@ -140,10 +140,10 @@
             z-index: 1;
         }
         &__desc {
-            border-top: 1px solid oscurecer($color);
-            border-bottom: 1px solid oscurecer($color);
-            border-right: 1px solid oscurecer($color);
-            border-left: 1px solid oscurecer($color);
+            border-top: 1px solid $dark-color;
+            border-bottom: 1px solid $dark-color;
+            border-right: 1px solid $dark-color;
+            border-left: 1px solid $dark-color;
             margin-left: -78px;
             padding-left: 80px;
             padding-right: 10px;
