--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -71,6 +71,7 @@
             padding-left: 70px;
             max-width: 300px;
             word-wrap: break-word;
+            padding-right: 10px;
         }
     }
 
