--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -1,3 +1,8 @@
+@media screen and (min-width:1025px) {
+.about-me__desc {
+    width: 40%;
+    }
+}
 @media screen and (max-width:1024px) {
 
     .profile__container {
