--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -67,8 +67,9 @@
             border-top: 1px solid $dark-color;
             border-bottom: 1px solid $dark-color;
             border-right: 1px solid $dark-color;
-            margin-left: -60px;
-            padding-left: 70px;
+            margin-left: -90px;
+            padding-left: 60px;
+            width: 300px;
             max-width: 300px;
             word-wrap: break-word;
             padding-right: 10px;
