--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -36,12 +36,12 @@
                 z-index: 1;
             }
             &__desc {
+                text-align: center;
                 border-top: 1px solid $dark-color;
                 border-bottom: 1px solid $dark-color;
                 border-right: 1px solid $dark-color;
-                margin-left: -70px;
-                padding-left: 80px;
-                padding-right: 60px;
+                margin-left: -90px;
+                width: 600px;
                 max-width: 600px;
                 word-wrap: break-word;
             }
@@ -49,7 +49,7 @@
     }
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:767px) {
         
     .profile__container {
         grid-template-columns: 1fr;
@@ -73,7 +73,7 @@
             margin-left: -70px;
             padding-left: 80px;
             padding-right: 60px;
-            max-width: 600px;
+            max-width: 300px;
             word-wrap: break-word;
             }
         }
@@ -101,10 +101,10 @@
                 border-top: 1px solid $dark-color;
                 border-bottom: 1px solid $dark-color;
                 border-right: 1px solid $dark-color;
-                margin-left: -70px;
+                margin-left: -78px;
                 padding-left: 80px;
-                padding-right: 30px;
-                max-width: 600px;
+                padding-right: 10px;
+                max-width: 270px;
                 word-wrap: break-word;
             }
         }
@@ -152,7 +152,7 @@
             margin-left: -78px;
             padding-left: 80px;
             padding-right: 10px;
-            max-width: 600px;
+            max-width: 220px;
             word-wrap: break-word;
             }
         }
