--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -1,9 +1,8 @@
-@media screen and (min-width:1025px) {
-.about-me__desc {
-    width: 40%;
-    }
-}
 @media screen and (max-width:1024px) {
+
+    .rol-badge, .about-me__desc {
+       width: 70%; 
+    }
 
     .profile__container {
         grid-template-columns: 1fr;
